Fix: skill card overflow

--- a/src/components/SkillCards/SkillCards.css
+++ b/src/components/SkillCards/SkillCards.css
@@ -37,5 +37,10 @@
   padding-bottom: 0.5rem;
   padding-top: 0.5rem;
   display: grid;
+  overflow: scroll;
 
+}
+::-webkit-scrollbar {
+  width: 0px;
+  height: 0px;
 }
